Modify css animation parameters for title
Had too short of a width. Title didn't fit.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -93,28 +93,28 @@ body {
 #title {
     border-right: solid 3px rgba(0, 0, 0, 0.75);
     white-space: pre;
-    overflow: hidden;     
+    overflow: hidden;
     letter-spacing: 0.20rem;
     margin-top: 50px;
     margin-bottom: 20px;
-    max-width: 480px;
+    max-width: 1000px;
   }
   
   /* Animation */
 #title {
-    animation: animated-text 2s steps(11,end) 0.5s 1 normal both,
-        animated-cursor 750ms steps(11,end) infinite;
+    animation: animated-text 2s steps(20,end) 0.5s 1 normal both,
+        animated-cursor 750ms steps(20,end) infinite;
   }
 
 #title.darker-title {
-    animation: animated-text 2s steps(11,end) 0.5s 1 normal both, darker-animated-cursor 750ms steps(11,end) infinite;
+    animation: animated-text 2s steps(20,end) 0.5s 1 normal both, darker-animated-cursor 750ms steps(20,end) infinite;
 }
   
   /* text animation */
   
   @keyframes animated-text{
-    from{width: 0%;}
-    to{width: 480px;}
+    from{width: 100px;}
+    to{width: 1000px;}
   }
   
   /* cursor animations */
