--- a/CSS/main.css
+++ b/CSS/main.css
@@ -86,7 +86,11 @@ body {
 }
 
 .darker-theme {
-    background-image: linear-gradient(100deg, #001214, #001f29);
+    background-image: url(../assets/new-moon-face.png);
+    background-size: 50px;
+    width: 50px;
+    height: 50px;
+
 }
 
 /* Animation */
